Plugin Name: Membership 2
Author:      Ashok Kumar Nath, Philipp Stracker
Build Stamp: BUILDTIME

Change Log:
----------------------------------------------------------------------
1.0.4
- Added: Premium WP Rest Addon
- Added: Advanced media protection

1.0.3.6
- Added: Added setting to enable or disable cron usage for email sending
- Added: Emails can now be sent directly or using the WordPress cron
- Added: Integration with new reCaptcha plugin to the reCaptcha Addon
- Added: Option for Admin created members to generate an invoice to the membership
- Added: Option for manual invoice created to keep the expire date of the membership the same
- Added: Addon to hide protected pages from visitor search
- Added: Plugin deactivation hook to clear Membership Crons
- Fixed: Multiple Invoice creation
- Fixed: Default gateway on invoice
- Fixed: Invoice status not changing for free payments
- Fixed: Protection with many addons enabled
- Fixed: Mailchimp list for deactivated users with drop down memberships
- Fixed: Membership Script and Style conflict on other admin pages
- Fixed: URL Protection Addon on https
- Fixed: Media Protection Addon
- Fixed: Invoices with no gateways no longer checked by cron and not automatically marked PAID
- Fixed: Editing Subscription detailes for administrators.
- Fixed: Stripe API upgraded
- Fixed: Export for free version
- Other minor enhancements/fixes

1.0.3.5
----------------------------------------------------------------------
- Added: Added a filter "ms_rule_url_model_exception_rule" to set exception for URL restriction addon
- Improved: Remove Paypal "Ship to my billing address" option from express gateway as this is digital product
- Improved: wp_get_sites() deprecated function is replaced with get_sites()
- Fixed: Protection rule could not be access from subsites when network protection was enabled
- Fixed: Fatal error - Uncaught Error: [] operator not supported for strings