@@ -891,7 +891,10 @@ class MS_Controller_Frontend extends MS_Controller {
 	 * @return The new signup url.
 	 */
 	public function signup_location( $url ) {
-		$url = MS_Model_Pages::get_page_url( MS_Model_Pages::MS_PAGE_REGISTER );
+
+		$change_signup = apply_filters( 'ms_frontend_controller_change_signup_url', true );
+		if ( $change_signup )
+			$url = MS_Model_Pages::get_page_url( MS_Model_Pages::MS_PAGE_REGISTER );
 
 		return apply_filters(
 			'ms_controller_frontend_signup_location',
