@@ -7,6 +7,8 @@ Change Log:
 1.0.4
 - Added: Premium WP Rest Addon
 - Added: Advanced media protection
+- Added: New filter ms_frontend_controller_change_signup_url to allow disabling Membership login
+- Added: Column on user list with Membership name
 
 1.0.3.6
 - Added: Added setting to enable or disable cron usage for email sending
